# rest_framework_securejwt

./: README.rst  pyproject.toml
rest_framework_securejwt/: authentication.py  models.py  serializers.py  settings.py  views.py
